<resources>
    <string name="app_name">Soulmate</string>
    <string name="action_settings">Settings</string>
    <string name="action_myRequests">Requests</string>
    <string name="action_myMatches">Matches</string>
    <string name="action_search">Search</string>
    <string name="action_editProfile">Profile</string>
    <string name="action_home">Home</string>

    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_sign_in">Sign In</string>
    <string name="string_register">Register</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_my_requests">MyRequestsActivity</string>
    <string name="title_activity_my_matches">MyMatchesActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="string_create_username">Create Username</string>
    <string name="string_reenter_password">Re-enter Password</string>
    <string name="string_create_password">Create Password</string>
    <string name="string_age">Age</string>

    <string name="string_save">Save</string>
    <string name="string_cancel">Cancel</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>
