<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.toh5148.datingapp.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/string_create_username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:inputType="textPassword"
        android:hint="@string/string_create_password"/>
    <EditText
        android:id="@+id/reenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:inputType="textPassword"
        android:hint="@string/string_reenter_password"/>

<LinearLayout
    android:id="@+id/templayout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_below="@id/reenter_password"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:layout_weight="1"
        android:hint="@string/string_age"/>

    <Spinner
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/reenter_password" />

</LinearLayout>

    <Button
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/templayout"
        android:onClick="createAccountClick"
        android:text="@string/string_register"/>

</RelativeLayout>
